	  discussed at http://www.drdobbs.com/web-development/\
	  an-embeddable-lightweight-xml-rpc-server/184405364.  Contributed by
	  Max Holtzberg.
	* apps/netutils/uip_listenon.c:  Logic in uip_server.c that creates
	  the listening socket was moved to this new file to support re-use.
	  Contributed by Kate.
	* apps/netutils/webserver/httpd.c:  The option CONFIG_NETUTILS_HTTPD_SINGLECONNECT
	  can now be used to limit the server to a single thread.  Option
	  CONFIG_NETUTILS_HTTPD_TIMEOUT can be used to generate HTTP 408 errors.
	  Both from Kate.
	* apps/netutils/webserver/httpd.c:  Improvements to HTTP parser from
	  Kate.
	* apps/netutils/webserver/httpd.c:  Add support for Keep-alive connections
	  (from Kate).
	* apps/NxWidget/Kconfig:  This is a kludge.  I created this NxWidgets
	  directory that ONLY contains Kconfig.  NxWidgets does not live in
	  either the nuttx/ or the apps/ source trees.  This kludge makes it
	  possible to configure NxWidgets/NxWM without too much trouble (with
	  the tradeoff being a kind ugly structure and some maintenance issues).
	* apps/examples/Make.defs: Missing support for apps/examples/watchdog.
	* apps/NxWidgets/Kconfig:  Add option to turn on the memory monitor
	  feature of the NxWidgets/NxWM unit tests.

6.23 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* vsn: Moved all NSH commands from vsn/ to system/.  Deleted the vsn/
	  directory.
	* Makefile:  Change order of includes when CONFIG_NEWCONFIG=y.  In
	  that case, namedapp must be included first so that the namedapp
	  context is established first.  If the namedapp context is established
	  later, it will overwrite any existing namedapp_list.h and nameapp_proto.h
	  files.
	* CONFIG_EXAMPLES_*: To make things consistent, changed all occurrences
	  of CONFIG_EXAMPLE_* to CONFIG_EXAMPLES_*.
	* Kconfig:  Fleshed out apps/examples/adc/Kconfig and apps/examples/wget/Kconfig.
	  There are still a LOT of empty, stub Kconfig files.