@@ -805,7 +805,7 @@ static uint16_t stm32_readnoshift(FAR struct stm32_dev_s *priv, FAR uint16_t *ac
 
 static void stm32_setcursor(FAR struct stm32_dev_s *priv, uint16_t col, uint16_t row)
 {
-  if (priv->type = LCD_TYPE_ILI9919)
+  if (priv->type == LCD_TYPE_ILI9919)
     {
       stm32_writereg(priv, LCD_REG_78, col); /* GRAM horizontal address */
       stm32_writereg(priv, LCD_REG_79, row); /* GRAM vertical address */
